--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1123,6 +1123,10 @@ ul#project-nav {
     clear:both;
 }
 
+#research article.article h2 {
+    font-weight: bold;
+}
+
 #research article.article h2 a {
     text-decoration: none;
 }
