--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -608,7 +608,8 @@ div.date .month {
 #portfolio article.project.detail {
     position:relative;
     overflow: auto;
-    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom,
+                url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
 /* slideshow */
