--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -959,7 +959,7 @@ div.date .month {
     margin: 0 0 0 0;
 }
 .details .meta ul {
-    margin:0 0 0 0;
+    /*margin:0 0 0 0;*/
 }
 
 .details .meta .info-boxes ul {
