--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1087,7 +1087,8 @@ ul#project-nav {
 }
 
 .max ul#project-nav {
-    margin:40px 10px 0 0;
+    margin-top:40px;
+    padding-right:20px;
     top:0;
     right:0;
 }
