--- a/futuregreen/templates/studio/studio_news.html
+++ b/futuregreen/templates/studio/studio_news.html
@@ -2,7 +2,33 @@
 {% block page_title %}: News{% endblock page_title %}
 {% load generic_flatblocks %}
 {% block content %}
-<article id="profile">
-    {%  gblock "firm_profile" for "content.ContentBlock" %}
-</article>
+{% block main %}
+{% endblock main %}
+{% block aside %}
+    <aside class="third">
+        <h2 class="box">News Archive</h2>
+        {% load news_tags archive_tags%}
+        <h3 class="box">Recent News</h3>
+        <ul class="box linked-list">
+        {% get_latest_news 10 as news_list %}
+        {%  for news in news_list %}
+            <li><a href="{{ news.get_absolute_url }}">{{ news.title }}</a></li>
+        {%  endfor %}
+        </ul>
+        <h3 class="box">Past News</h3>
+        {% get_news_archive as dates %}
+        <ul class="box linked-list">
+            {% for date in dates %}
+            <li><a href="#" title="{{ date|date:"F Y" }}">{{ date|date:"F Y" }}</a></li>
+            {% endfor %}
+        </ul>
+        <h2 class="box">Recent Projects</h2>
+         <ul class="box linked-list">
+        {% get_latest_projects 8 as project_list %}
+        {%  for project in project_list %}
+            <li><a href="{{ news.get_absolute_url }}">{{ project.title }}</a></li>
+        {%  endfor %}
+        </ul>
+    </aside>
+{% endblock aside %}
 {% endblock content %}
