--- a/futuregreen/templates/studio/studio_news.html
+++ b/futuregreen/templates/studio/studio_news.html
@@ -2,6 +2,11 @@
 {% block page_title %}: News{% endblock page_title %}
 {% load generic_flatblocks %}
 {% block content %}
+    <header class="box two-thirds">
+    {% block content_title %}
+        <h1>Studio News</h1>
+    {% endblock content_title %}
+    </header>
 {% block main %}
 {% endblock main %}
 {% block aside %}
