--- a/futuregreen/templates/studio/studio_news.html
+++ b/futuregreen/templates/studio/studio_news.html
@@ -4,7 +4,7 @@
 {% block content %}
     <header class="box two-thirds">
     {% block content_title %}
-        <h1>Studio News</h1>
+        <h1>Studio: News</h1>
     {% endblock content_title %}
     </header>
 {% block main %}
