--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -339,6 +339,7 @@ h1.overlay {
 	padding-bottom: 56.25%;
 	padding-top: 30px;
 	height: 0;
+    margin-top:10px;
 	overflow: hidden;
 }
 
@@ -352,8 +353,8 @@ h1.overlay {
 	height: 100%;
 }
 
-article.detail,
-article.list {
+article.news,
+article.article {
     clear:both;
 }
 
