--- a/futuregreen/templates/studio/includes/news.html
+++ b/futuregreen/templates/studio/includes/news.html
@@ -9,12 +9,7 @@
         </section>
         <section class="box three-quarters">
             <h2>{{ news.title }}</h2>
-            <ul class="tags">
-                {% for tag in article.tags.all %}
-                <li><a href="{% url articles_by_tag slug=tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}</li>
-                {% endfor %}
-            </ul>
-            {% for image in news.newsimage_set.all %}
+            {% for image in news.newsitemimage_set.all %}
             {% if image.main %}
             <figure style="margin-top:10px;">
                 <img class="flex" src="{{ image.detail.url }}" title="{{ image.name }}" alt="{{ image.caption }}" />
@@ -22,25 +17,5 @@
             {%  endif %}
             {%  endfor %}
             {{ news.body_html|safe }}
-            {%  for item in article.articleproject_set.all %}
-                <article class="project related">
-                    <figure class="seventh">
-                        {% for image in item.project.projectimage_set.all %}
-                            {% if image.is_main %}
-                                <a href="{{ item.project.get_absolute_url }}">
-                                    <img class="flex" src="{{ image.list.url }}"
-                                         alt="{{ item.project.name }}"
-                                         title="{{ item.project.name }}" />
-                                </a>
-                            {% endif %}
-                        {% endfor %}
-                    </figure>
-                    <section class="sixth-sevenths">
-                        <h3><a href="{{ item.project.get_absolute_url }}">{{ item.project.name }}</a></h3>
-                        <p style="font-size:.85em;">{{ item.project.short_description|safe }}</p>
-                    </section>
-
-                </article>
-            {%  endfor %}
          </section>
     </article>
