--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
-{% block body_id %}contact{% endblock body_id %}
+{% block body_class %}contact{% endblock body_class %}
 {% block content %}
     <section class="full box">
         <h1>Contact</h1>
