--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
-{% block body_id %}home{% endblock body_id %}
+{% block body_class %}home{% endblock body_class%}
 {% block content %}
      <div class="full">
          <article class="project list box sixth"">
