--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block section_title %}: Research{% endblock section_title %}
-{% block body_id %}research{% endblock body_id %}
+{% block body_class %}research{% endblock body_class %}
 {% block content %}
     <header class="box two-thirds">
     {% block content_title %}
