--- a/futuregreen/templates/studio/studio_news.html
+++ b/futuregreen/templates/studio/studio_news.html
@@ -1,5 +1,6 @@
 {% extends "studio/studio_base.html" %}
 {% block page_title %}: News{% endblock page_title %}
+{% block body_class%}{{ block.super }} news{% endblock body_class %}
 {% load generic_flatblocks %}
 {% block content %}
     <header class="box two-thirds">
