--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -51,7 +51,7 @@
 {% endblock head %}
 </head>
 
-<body id="{% block body_id %}default{% endblock body_id%}">
+<body class="{% block body_class %}default{% endblock body_class%}">
 {% block body %}
     {% block header %}
     <header>
