--- a/futuregreen/templates/blog/blog_base.html
+++ b/futuregreen/templates/blog/blog_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block section_title %}: Research{% endblock section_title %}
-{% block body_id %}research{% endblock body_id %}
+{% block body_class %}research{% endblock body_class %}
 {% block content %}
     {% block main %}{%  endblock main %}
     {% block aside %}
