--- a/futuregreen/templates/studio/newsitem_list.html
+++ b/futuregreen/templates/studio/newsitem_list.html
@@ -1,6 +1,6 @@
 {% extends "studio/studio_news.html" %}
 {% block main %}
-<section class="two-thirds">
+<section class="main two-thirds">
     {%  for news in news_list %}
          {% include "studio/includes/news.html" %}
     {%  endfor %}
