--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -7,10 +7,12 @@
             <img alt="Future Green Studio" src="{{ STATIC_URL }}css/images/logo_square.png" />
          </article>
          <article class="text box half" id="profile">
+             <a class="wraplink" href="{% url studio %}">
              <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <p><a href="{% url studio %}" class="tease">Read More</a></p>
              </div>
+             </a>
         </article>
         {% for project in project_list|slice:"1:3" %}
             <article class="project list box sixth" id="{{ project.slug }}">
@@ -87,12 +89,14 @@
            </article>
        {% endfor %}
         <article class="text box full" id="news">
+           <a class="wraplink" href="{{ news.get_absolute_url }}">
            <div>
            <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
            <h2>{{ news.title }}</h2>
            {{ news.excerpt_html|safe|truncatewords_html:20 }}
            <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
            </div>
+           </a>
         </article>
     </div>
 {% endblock content %}
