--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -3,9 +3,34 @@
 {% block body_class %}home{% endblock body_class%}
 {% block content %}
      <div class="full">
-         <article class="project list box sixth"">
-            <img alt="Future Green Studio" src="{{ STATIC_URL }}css/images/logo_square.png" />
-         </article>
+        {% for project in project_list|slice:"1:5" %}
+            <article class="project list box sixth" id="{{ project.slug }}">
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+
+            </article>
+        {% endfor %}
+     </div>
+     <div class="full">
+        {% for project in project_list|slice:"1:2" %}
+            <article class="project list box sixth" id="{{ project.slug }}">
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+
+            </article>
+        {% endfor %}
          <article class="text box half" id="profile">
              <a class="wraplink" href="{% url studio %}">
              <div>
@@ -14,7 +39,7 @@
              </div>
              </a>
         </article>
-        {% for project in project_list|slice:"1:3" %}
+        {% for project in project_list|slice:"2:4" %}
             <article class="project list box sixth" id="{{ project.slug }}">
                 <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
 
