--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -3,7 +3,24 @@
 {% block body_class %}home{% endblock body_class%}
 {% block content %}
      <div class="full">
-        {% for project in project_list|slice:"1:5" %}
+        {% for project in project_list|slice:"1:2" %}
+            <article class="project list box sixth" id="{{ project.slug }}">
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+
+            </article>
+        {% endfor %}
+        <article class="text box sixth" id="profile">
+
+             <div></div>
+        </article>
+        {% for project in project_list|slice:"2:6" %}
             <article class="project list box sixth" id="{{ project.slug }}">
                 <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
 
