--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -55,7 +55,7 @@
              </div>
              </a>
         </article>
-         <article class="text box full" id="news">
+         <article class="text box third" id="news">
            <a class="wraplink" href="{{ news.get_absolute_url }}">
            <div>
            <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
