--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -6,19 +6,6 @@
         <article class="text box sixth">
                 <div></div>
         </article>
-        {% for project in project_list|slice:"1:2" %}
-            <article class="project list box sixth" id="{{ project.slug }}">
-                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
-
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-
-            </article>
-        {% endfor %}
         {% for project in project_list|slice:"2:5" %}
             <article class="project list box sixth" id="{{ project.slug }}">
                 <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
@@ -63,7 +50,7 @@
 
             </article>
         {% endfor %}
-         <article class="text box half" id="profile">
+         <article class="text box half">
              <a class="wraplink" href="{% url studio %}">
              <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
