--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -50,7 +50,7 @@
 
             </article>
         {% endfor %}
-         <article class="text box half">
+         <article class="text box half" id="profile">
              <a class="wraplink" href="{% url studio %}">
              <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
