--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -96,6 +96,9 @@
            </div>
            </a>
         </article>
+        <article class="text box third">
+                <div></div>
+        </article>
     </div>
     <div class="third">
         {% for project in project_list|slice:"5:8" %}
