--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -93,6 +93,7 @@
 
             </article>
         {% endfor %}
+    {% endfor %}
     </div>
     <div class="sixth">
         {% for project in project_list|slice:"7:8" %}
