--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -82,7 +82,7 @@
 
             </article>
         {% endfor %}
-         <article class="text box" id="profile">
+         <article class="text box full" id="profile">
              <a class="wraplink" href="{% url studio %}">
              <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
