--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -59,7 +59,7 @@
 
             </article>
         {% endfor %}
-         <article class="text box two-thirds" id="news">
+         <article class="text box two-thirds" id="article">
            <a class="wraplink" href="{{ news.get_absolute_url }}">
            <div>
            <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
